--- a/DailyLog/Y2018M06.md
+++ b/DailyLog/Y2018M06.md
@@ -36,3 +36,5 @@ std::vector<uchar> resizeImage(std::string filename, cv::ImreadModes mode,int wi
     return buffer;
 }
 ````
+ - imencode는 param으로 vector를 사용한다. 첫번째 argument에 따라 param이 달라지는데, 몇개 필요한지 잘 모름
+ 
