--- a/DailyLog/Y2018M06.md
+++ b/DailyLog/Y2018M06.md
@@ -20,7 +20,10 @@ int label;
 std::string filename;
 ss >> filename >> label;
 ````
+
 * OpenCV로 이미지를 리사이즈하고, 다시 png로 인코딩한 버퍼를 얻었다. (lmdb에 넣기 위해 필요했다.)
+  * imencode는 param으로 vector를 사용한다. 첫번째 argument에 따라 param이 달라지는데, 몇개 필요한지 잘 모르겠다.
+
 ````
 std::vector<uchar> resizeImage(std::string filename, cv::ImreadModes mode,int width, int height)
 {
@@ -36,5 +39,3 @@ std::vector<uchar> resizeImage(std::string filename, cv::ImreadModes mode,int wi
     return buffer;
 }
 ````
- - imencode는 param으로 vector를 사용한다. 첫번째 argument에 따라 param이 달라지는데, 몇개 필요한지 잘 모름
- 
