--- a/DailyLog/Y2018M06.md
+++ b/DailyLog/Y2018M06.md
@@ -10,7 +10,7 @@
 * cuda 9.0을 설치했다.
   * 실수로 최신버전인 9.2를 설치해서 또 깔았다.
   * nvcuda.dll은 nvidia 그래픽 디바이스를 install 해야 생성된다.
-  * CUDA 설치할 때는 무조건 nvidia 그래픽 디바이스 드라이버를 제거하고 설치해야 한다.
+  * CUDA 설치할 때는 무조건 **nvidia 그래픽 디바이스 드라이버를 제거하고 설치**해야 한다.
 * cpp stringstream 사용법을 배웠다.
 ````
 const char* cString;
