--- a/DailyLog/Y2018M06D20.md
+++ b/DailyLog/Y2018M06D20.md
@@ -1,3 +1,6 @@
 # 2018년 6월
 # 6월 20일 수요일
+* emcpp Efgective Modern C++
+  * unit 1 형식연역 type deduction
+    * 형식연역은 탬플릿 param type이나 auto 변수의 타입능 결정하는 것을 말한다.
 * 인공지능 실무회의 @마곡 사이언스파크 E14동 9층
