--- a/DailyLog/Y2018M06D20.md
+++ b/DailyLog/Y2018M06D20.md
@@ -3,4 +3,11 @@
 * emcpp Efgective Modern C++
   * unit 1 형식연역 type deduction
     * 형식연역은 탬플릿 param type T나 auto 변수의 타입을 결정하는 것을 말한다.
+    * 템플릿 함수에 값으로 입력된 배열의 형식은 포인터 형식으로 연역된다.
+      * 배열이 전달될 때, 배열의 첫원소를 가리키는 포인터로 변환되는데 이것을 **포인터로의 붕괴**라고 한다.
+      * 배열에 대한 참조로 전달되기 위해서는 T&로 받으면 된다. 배열의 원소의 갯수를 알 수 있다.
+    * 함수형식도 함수포인터로 붕괴된다.
+    * 템플릿 형식 연역도중에 참조 형식의 인수들은 비참조로 취급된다. 참조성이 무시된다.
 * 인공지능 실무회의 @마곡 사이언스파크 E14동 9층
+* C에서 Python 호출하기
+    * C에서 python을 호출하는 것을 Embedding이라고 한다. 반대의 경우는 extending이라 부른다.
