--- a/DailyLog/Y2018M06D20.md
+++ b/DailyLog/Y2018M06D20.md
@@ -11,3 +11,7 @@
 * 인공지능 실무회의 @마곡 사이언스파크 E14동 9층
 * C에서 Python 호출하기
     * C에서 python을 호출하는 것을 Embedding이라고 한다. 반대의 경우는 extending이라 부른다.
+    * python설치 경로에서 헤더파일과 lib, dll을 찾을 수 있다. 아나콘다의 경우는 pkg경로에 있다.
+      * DEBUG build에서는 _d.lib를 찾는데, 이건 없는 것 같음
+      * 실행할 때, PYTHONHOME, PYTHONPATH에서 python을 찾음.
+      
