--- a/DailyLog/Y2018M06D20.md
+++ b/DailyLog/Y2018M06D20.md
@@ -14,4 +14,25 @@
     * python설치 경로에서 헤더파일과 lib, dll을 찾을 수 있다. 아나콘다의 경우는 pkg경로에 있다.
       * DEBUG build에서는 _d.lib를 찾는데, 이건 없는 것 같음
       * 실행할 때, PYTHONHOME, PYTHONPATH에서 python을 찾음.
+      * reflection으로 호출하는 것과 같게 느껴진다. **reference count를 관리해야 한다.**
+````
+int Multiply(int x, int y)
+{
+    PyObject* mydef = PyImport_ImportModule("scripts.my_def");
+    int result;
+    if (mydef) {
+        PyObject* multiply = PyObject_GetAttrString(mydef, "Multiply");
+        if (multiply) {
+            PyObject *r = PyObject_CallFunction(multiply, "ii", x, y);
+            if (r) {
+                result = (int)_PyLong_AsInt(r);
+                Py_XDECREF(r);
+            }
+            Py_XDECREF(multiply);
+        }
+        Py_XDECREF(mydef);
+    }
+    return result;
+}
+````
       
