--- a/DailyLog/Y2018M06D22.md
+++ b/DailyLog/Y2018M06D22.md
@@ -7,4 +7,10 @@
 #include <opencv2/core.hpp>
 #pragma warning(pop)
 ````
+* torch
+  * Lua를 기반으로한 스크립트 언어, 머신러닝을 위한 오픈소스 라이브러리
+* PyTorch
+  * Torch에 기반한 Python을 위한 오픈스 머신러닝 라이브러리
+  * Facebook이 개발했고, 자연어처리를 위해 사용된다.
+
 * emcpp Effective Modern C++
