--- a/DailyLog/Y2018M06D22.md
+++ b/DailyLog/Y2018M06D22.md
@@ -12,8 +12,12 @@
 * PyTorch
   * Torch에 기반한 Python을 위한 오픈스 머신러닝 라이브러리
   * Facebook이 개발했고, 자연어처리를 위해 사용된다.
-* Trouble Shooting
-  * caffe가 새 PC에서 빌드되지 않음
-    * 원인 : 새 PC는 CUDA의 여러버전이 설치되어 있었음 CUDA 9.2 9.0 8.0
-    * 수정 : 환경변수에 CUDA_PATH를 8.0으로 변경하면됨
+* TS Trouble Shooting
+  * 문제 : caffe가 새 PC에서 빌드되지 않음
+  * 원인 : 새 PC는 CUDA의 여러버전이 설치되어 있었음 CUDA 9.2 9.0 8.0
+  * 수정 : 환경변수에 CUDA_PATH를 8.0으로 변경하면됨
+* TS 
+  * 문제 : 테스트 탐색기에서 테스트를 찾지 못함
+  * 원인 : 새 PC에 Google Test Adapter가 설치되어 있지 않음
+  * 수정 : 설치~
 * emcpp Effective Modern C++
