--- a/DailyLog/Y2018M06D22.md
+++ b/DailyLog/Y2018M06D22.md
@@ -20,4 +20,7 @@
   * 문제 : 테스트 탐색기에서 테스트를 찾지 못함
   * 원인 : 새 PC에 Google Test Adapter가 설치되어 있지 않음
   * 수정 : 설치~
+* TensorRT
+  * https://developer.nvidia.com/nvidia-tensorrt-4x-download
+  * 윈도우 버전은 없음, 우분투만 지원... 
 * emcpp Effective Modern C++
