--- a/DailyLog/Y2018M06D26.md
+++ b/DailyLog/Y2018M06D26.md
@@ -5,3 +5,7 @@
   * YOLO(You Only Look Once)
     * https://en.wikipedia.org/wiki/Object_detection 
     * 영상에서 객체를 검출하기 위해 사용된다.
+mllec 01
+regression
+binary classification
+multi level classification
