--- a/DailyLog/Y2018M06D27.md
+++ b/DailyLog/Y2018M06D27.md
@@ -6,3 +6,8 @@
 #include <windows.h>
 int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, char*, int nShowCmd)
 ````
+* windows
+  * 다른 프로그램 실행하기
+````
+ShellExecute(NULL, _T("open"), sLogCollectorProcName, NULL, NULL, SW_SHOWNORMAL);
+````
