--- a/DailyLog/Y2018M06D27.md
+++ b/DailyLog/Y2018M06D27.md
@@ -11,3 +11,5 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, char*, int nSho
 ````
 ShellExecute(NULL, _T("open"), sLogCollectorProcName, NULL, NULL, SW_SHOWNORMAL);
 ````
+* util
+  * 수식 graph : https://www.desmos.com/calculator 
